popup blocker now allows windows to be opened on space and return key events, in case it was from a focused button. bug 239078 r=bzbarsky,jst a=chofmann